# gpuemu-corpus

./: .gitignore  README.md  pyproject.toml
analysis/: README.md  make_figures.py  p1_table.py  p2_calibrate.py  p3_strategy_table.py  p4_correlation.py  summarize.py
drivers/: README.md  _capture.py  _p1lib.py  p1_llm_kernels.py  p3_strategies.py  p4_artifacts.py  smoke.py
gpuemu_corpus/: __init__.py
gpuemu_corpus/data/: README.md  _refkit.py
gpuemu_corpus/data/attention_triton/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/attention_triton_buggy/: kernel.py  meta.json
gpuemu_corpus/data/elu_triton/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/flash_attention_triton/: kernel.py  meta.json
gpuemu_corpus/data/flash_attention_triton_buggy/: kernel.py  meta.json
gpuemu_corpus/data/gelu_triton/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/gelu_triton_buggy/: kernel.py  meta.json
gpuemu_corpus/data/l2norm_triton/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/l2norm_triton_buggy/: kernel.py  meta.json
gpuemu_corpus/data/layernorm/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/leaky_relu_triton/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/leaky_relu_triton_buggy/: kernel.py  meta.json
gpuemu_corpus/data/matmul/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/matmul_triton/: kernel.py  meta.json  ref_fp64.py
gpuemu_corpus/data/matmul_triton_buggy/: kernel.py  meta.json
gpuemu_corpus/data/relu_triton/: kernel.py  (+2 more)
scripts/: replay_from_b2.py  run_p4_cross_gpu.py  vendor_corpus.py
(+25 files in other folders)
